[package]
name = "mahjong_server"
version = "0.1.0"
authors = ["Joshua Gammage <joshuapgammage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
tungstenite = "0.10.1"
env_logger = "0.7.1"
log = "0.4.8"